--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="img/programgd.jpg" alt="logo" width="120">
             <h3>Welcome to Programgd</h3>
             <h1>I'm Gagan<span class = "change_content"></span></h1>
-            <p class="lead text-muted">"Artist at Work"</p>
+            <p class="lead text-muted">"Artist at heart"</p>
             <p>
                 <a href="https://www.youtube.com/c/Programgd" class="btn btn-danger my-2">Watch more</a>
                 <a href="https://www.youtube.com/Programgd?sub_confirmation=1" class="btn btn-primary my-2">Subscribe here</a>
